# marshall_fire_explorer

./: .env.example  .gitignore  CLAUDE.md  README.md  disaster-monitor-plan.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
config/: settings.py
dbt/: dbt_project.yml  profiles.yml
docs/plans/: 2026-03-04-project-scaffold-design.md  2026-03-04-project-scaffold-plan.md  2026-03-05-recovery-tracking.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.css  App.tsx  index.css  store.ts  types.ts
ml/inference/: damage.py  rebuild.py
notebooks/: 01_duckdb_columnar_intuition.ipynb  02_sar_first_look.ipynb  03_sar_preprocessing.ipynb  04_sar_change_detection.ipynb  04b_insar_coherence.ipynb  05_landsat_ir_fusion.ipynb  06_parcel_zonal_stats.ipynb  07_permit_ground_truth.ipynb  08_damage_classifier.ipynb  08_siamese_pretrained_inference.ipynb  09_recovery_tracking.ipynb  09_siamese_finetuning.ipynb  10_lstm_signal_exploration.ipynb  11_lstm_training.ipynb  11_permit_cross_exam.ipynb  exploration.ipynb
pipeline/: run.py
pipeline/acquire/: landsat.py  lidar.py  parcels.py  parcels_permits.py  sentinel1.py
pipeline/analyze/: curvature.py  recovery.py
pipeline/output/: frontend_data.py  parcel_json.py  registry.py  timeline_json.py
pipeline/process/: coherence.py  landsat.py  lidar.py  (+1 more)
scripts/: deploy.sh  download_cslc_bulk.py  llm_recovery.py  prep_frontend_data.py
tests/: test_acquire.py  test_output.py  test_process.py  test_settings.py
(+1528 files in other folders)
