[project]
name = "marshall-fire"
version = "0.1.0"
description = "Satellite-based disaster damage assessment and recovery monitoring — Marshall Fire 2021"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "boto3>=1.28",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.9",
    "pyarrow>=14.0",
    "rasterstats>=0.19",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pre-commit>=3.5",
    "detect-secrets>=1.4",
]
ml = [
    "torch>=2.1",
    "torchvision>=0.16",
    "torchgeo>=0.5",
    "tensorflow>=2.15",
    "mlflow>=2.10",
    "scikit-learn>=1.3",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
geo = [
    "pyrosar>=0.20",
    "pdal>=3.2",
    "laspy>=2.5",
]

[project.scripts]
marshall-fire = "pipeline.run:run_pipeline"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
